--- a/rb/Gemfile
+++ b/rb/Gemfile
@@ -14,6 +14,9 @@ gem 'turbolinks', '~> 5'
 gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
 
+gem 'sidekiq'
+gem 'redis-namespace'
+
 gem 'pry-rails'
 
 group :development, :test do
