--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,11 @@ dependencies:
   - hedis
   - aeson
   - lens
+  - persistent
+  - persistent-template
+  - persistent-postgresql
+  - resource-pool
+  - monad-logger
 
 default-extensions:
   - AutoDeriveTypeable
@@ -43,7 +48,6 @@ default-extensions:
   - ConstraintKinds
   - DataKinds
   - DefaultSignatures
-  - DeriveAnyClass
   - DeriveDataTypeable
   - DeriveFoldable
   - DeriveFunctor
