--- a/package.yaml
+++ b/package.yaml
@@ -40,6 +40,7 @@ dependencies:
   - persistent-postgresql
   - resource-pool
   - monad-logger
+  - extensible
 
 default-extensions:
   - AutoDeriveTypeable
