update stylish-haskell config for imports.

--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -5,7 +5,7 @@ steps:
       records: true
 
   - imports:
-      align: global
+      align: none
       list_align: after_alias
       pad_module_names: true
       long_list_align: inline
