--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,10 @@
-resolver: lts-13.5
+resolver: lts-13.14
 packages:
   - .
 
 extra-deps:
+  - beam-migrate-0.4.0.0
+  - beam-postgres-0.4.0.0
   - extensible-0.5
 
 nix:
