update project settings.

--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -16,7 +16,7 @@ steps:
 
   - language_pragmas:
       style: vertical
-      align: true
+      align: false
       remove_redundant: true
 
   - trailing_whitespace: {}
@@ -65,6 +65,7 @@ language_extensions:
   - TupleSections
   - TypeApplications
   - TypeFamilies
+  - TypeFamilyDependencies
   - TypeOperators
   - TypeSynonymInstances
   - ViewPatterns
