update stylish-haskell settings.

--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -38,6 +38,7 @@ language_extensions:
   - DeriveFunctor
   - DeriveGeneric
   - DeriveTraversable
+  - DerivingStrategies
   - DoAndIfThenElse
   - EmptyDataDecls
   - ExistentialQuantification
